[tool.poetry]
name = "map"
version = "0.1.0"
description = ""
authors = ["chazzhuang <chazzhuang@tecent.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "^4.5.4"
matplotlib = "^3.4.3"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
